5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1667_2325.log
== TEST (2019-04-16 16:07:55) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == DUMBLEDORE):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(bruxo == DUMBLEDORE):
NameError: name 'DUMBLEDORE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:20) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:52) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ").upper

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:35) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ")


if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654*0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
3.7452826599999995
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:14) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ")


if(bruxo == "DUMBLEDORE"):
	velocidade = 0.3479/107654
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
3.2316495439091903e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:43) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ")


if(bruxo == "DUMBLEDORE"):
	velocidade = 107654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
309439.49410750216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:17) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ")


if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:00) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ").upper()

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:34) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:20) 
-- CODE:
bruxo = input(("Digite o nome do bruxo: ").upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:48) 
-- CODE:
bruxo = input("Digite o nome do bruxo: .upper()")

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:38) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())
print (bruxo.upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: DUMBLEDORE
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:28) 
-- CODE:
bruxo.upper() = input("Digite o nome do bruxo: ")
print (bruxo.upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- ERROR:
File "XXXX", line 1
    bruxo.upper() = input()
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:52) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ").upper()
print (bruxo.upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- EXECUTION TIME:
0.110547
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
DUMBLEDORE
30.943949410750214
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
VOLDEMORT
5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:55) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ").upper()
print (bruxo.upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- EXECUTION TIME:
0.141315
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
DUMBLEDORE
30.943949410750214
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
VOLDEMORT
5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:00) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ").upper()
print (bruxo.upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DUMBLEDORE
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:52) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:46) 
-- CODE:
bruxo = (input("Digite o nome do bruxo: ").upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:36) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ")
bruxo.upper()

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:45) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ").upper()


if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:22) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:14) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:43:24) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- EXECUTION TIME:
0.166039
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
DIGITE O NOME DO BRUXO: 30.943949410750214
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
DIGITE O NOME DO BRUXO: 5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:26) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:24) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ")
print(bruxo.upper())
if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DUMBLEDORE
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:36) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ")
print(bruxo.upper())
if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DUMBLEDORE
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:44:49) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ")
print(bruxo.upper())
if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- EXECUTION TIME:
0.150222
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
DUMBLEDORE
30.943949410750214
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
VOLDEMORT
5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:07) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ").upper()

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:31) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ").upper(bruxo)

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo = input().upper(bruxo)
NameError: name 'bruxo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:14) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ",upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo = input("Digite o nome do bruxo: ",upper())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:23) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:48) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper(bruxo))

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo = input("Digite o nome do bruxo: ".upper(bruxo))
NameError: name 'bruxo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:56) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:30) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "dumbledore"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:48:50) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())

if(bruxo == "dumbledore"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- EXECUTION TIME:
0.214155
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
DIGITE O NOME DO BRUXO: 5.966461710452767
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
DIGITE O NOME DO BRUXO: 5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:11) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())
print(bruxo.upper())
if(bruxo == "dumbledore"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: DUMBLEDORE
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:49:21) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())
print(bruxo.upper())
if(bruxo == "dumbledore"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- EXECUTION TIME:
0.19512
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
DIGITE O NOME DO BRUXO: DUMBLEDORE
5.966461710452767
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
DIGITE O NOME DO BRUXO: VOLDEMORT
5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:23) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ".upper())
print(bruxo.upper())
if(bruxo == "dumbledore"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: DUMBLEDORE
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:41) 
-- CODE:
bruxo = input("Digite o nome do bruxo: ").upper()

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:06) 
-- CODE:
bruxo = (input("Digite o nome do bruxo: ").upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:39) 
-- CODE:
bruxo = float(input("Digite o nome do bruxo: ").upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo = float(input().upper())
ValueError: could not convert string to float: 'DUMBLEDORE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:12) 
-- CODE:
bruxo = .upper(input("Digite o nome do bruxo: "))

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- ERROR:
File "XXXX", line 1
    bruxo = .upper(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:52) 
-- CODE:
bruxo = (input("Digite o nome do bruxo: ".upper())

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- ERROR:
File "XXXX", line 3
    if(bruxo == "DUMBLEDORE"):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:14) 
-- CODE:
bruxo = (input("Digite o nome do bruxo: ".upper()))

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:32) 
-- CODE:
bruxo = (input("Digite o nome do bruxo: ".upper()))

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:44) 
-- CODE:
bruxo = (input("Digite o nome do bruxo: ".upper()))

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:54:52) 
-- CODE:
bruxo = (input("Digite o nome do bruxo: ".upper()))

if(bruxo == "DUMBLEDORE"):
	velocidade = 10.7654/0.3479
else:
	velocidade = 10.674/1.789
	
print(velocidade)
-- EXECUTION TIME:
0.133381
-- TEST CASE 1:
---- input:
DUMBLEDORE
---- correct output:
30.943949410750214
---- user output:
DIGITE O NOME DO BRUXO: 30.943949410750214
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
5.966461710452767
---- user output:
DIGITE O NOME DO BRUXO: 5.966461710452767
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
